前天改了点东西，忘了改的是啥了

--- a/src/main/webapp/WEB-INF/view/home.html
+++ b/src/main/webapp/WEB-INF/view/home.html
@@ -269,7 +269,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="javascript:;">
+					<a href="/home.html">
 						<div>
 							<img src="commons/img/Cii9EFd2EnyIRGXJAAAG7hicC8gAAGXrgP_-PUAAAcL346.png" />
 						</div>
@@ -279,9 +279,9 @@
 			</ul>
 
 			<div class="footer-user-info">
-				<a href="longin.html">登录</a>
+				<a href="login.html">登录</a>
 				<p class="sp">|</p>
-				<a href="sign.html">注册</a>
+				<a href="register.html">注册</a>
 			</div>
 			<div class="footer-icp">哈尔滨有限公司 | 哈尔滨有限公司</div>
 		</div>
