--- a/src/main/webapp/WEB-INF/view/aircraft.html
+++ b/src/main/webapp/WEB-INF/view/aircraft.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html>
  <head> 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-  <title>飞机票</title> 
-  <meta name="viewport" id="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" href="css/bootstrap.css" /> 
-  <link rel="stylesheet" href="css/style.css" />  
-  <link rel="stylesheet" href="css/train.css" /> 
-     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js" ></script>
-     
-<script>
-$(document).ready(function(){
-  $("#btn2").click(function(){
-    $("#t_re").append("<li id='touristContent'><div><div class='adult-div'><div class='tab-content adult' ><div class='del' id='del'><i class='glyphicon glyphicon-minus'></i></div><div class='content'><div class='row adultNameput'><span class='xi_xi'>成人票</span><span><input placeholder='乘客姓名 type=text class=name adult-put name=name value=></span></div><div class=row adultNameput><span class=xi_xi>身份证</span><span><input placeholder=身份证号 type=text class=name adult-put name=name value=></span></div></div></div></div></div></li>");
-  });
-});
-</script>
-     <script type="text/javascript">
-$(document).ready(function(){
-  $("#del").click(function(){
-    $("#touristContent").remove();
-  });
-});
-</script>   
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+    <title>飞机票</title> 
+    <meta name="viewport" id="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="../commons/css/bootstrap.css" /> 
+    <link rel="stylesheet" href="../commons/css/style.css" />  
+    <link rel="stylesheet" href="../commons/css/train.css" /> 
+    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js" ></script>
  </head> 
  <body> 
 
@@ -33,7 +18,7 @@ $(document).ready(function(){
                     
                 </div>
                 <div class="mhb_center mhb_center_across">
-                    <h2 class="">飞机票</h2>
+                    <h2 class="">火车票</h2>
                 </div>
                 <div class="mhb_right">
                     <a class="account" href="me.html" ><i class="glyphicon glyphicon-user"></i></a>
@@ -57,76 +42,83 @@ $(document).ready(function(){
     
     <div class="tab" id="choose-tab" >
         <div class="city-name J_depart">
-            <input  class="active di_zhi" placeholder="出发">
+            <input  class="active di_zhi" placeholder="出发" id="startAddress">
         </div>
         <div class="change">
-            <img src="img/cityIcon.png">
+            <img src="../commons/img/cityIcon.png">
         </div>
         <div class="city-name arrive-city J_arrive">
-              <input  class="active di_zhi text_r" placeholder="到达">
+              <input  class="active di_zhi text_r" placeholder="到达" id="endAddress">
         </div>
     </div>
     
     <div class="departdate-wrap">
-        <div class="departText"><input type="month" style="border: none; height: 50px;" /></div>
-        <div class="date">
-            <span class="mad" >07月29日</span>
-
-        </div>
+         <ul class="row zero time_erm">
+            <li class="date-label1">
+                <em>日期</em>
+            </li>
+            <li class="right_side col-sm-10 zero">
+                <div class="information_time">
+                    <div class="date-duration">
+                        <div class="check-in"><input type="date" id="date1" style="border: none; height: 50px;" /><em>启程日期</em></div>
+                        <div class="check-out"><input type="date" id="date2" style="border: none; height: 50px;" onchange="_change()"/><em>返程日期</em></div>
+                    </div>
+                </div>
+            </li>
+            <li class="date-label1 fr" style="font-size: 2rem;"><span class="date-sum" id="_span"></span></li>
+	    </ul>
     </div>
 
 
          <!--添加人-->
          <ul id="t_re">
-         <li id="touristContent">
-         <div >
-        <div class="adult-div">
-          <div class="tab-content adult " >
-            <div class="del" id="del">
-              <i class="glyphicon glyphicon-minus"></i>
-            </div>
-            <div class="content">
-              <div class="row adultNameput"><span class="xi_xi">成人票</span><span><input placeholder="乘客姓名" type="text" class="name adult-put" name="name" value=""></span></div>
-               <div class="row adultNameput"><span class="xi_xi">身份证</span><span><input placeholder="身份证号" type="text" class="name adult-put" name="name" value=""></span></div>
-            </div>
-          </div>
-        </div>
-        
-        
-        </div>
-         </li>
-         <li>
-         </li>
+         	<li id="touristContent">
+				<div>
+					<div class="adult-div">
+						<div class="tab-content adult ">
+							<div class="del" id="del">
+								<i class="glyphicon glyphicon-minus" onclick="del(this)"></i>
+							</div>
+							<div class="content">
+								<div class="row adultNameput"><span class="xi_xi">姓名</span><span><input placeholder="乘客姓名" type="text" class="name adult-put" name="name" value=""></span></div>
+								<div class="row adultNameput"><span class="xi_xi">身份证</span><span><input placeholder="身份证号" type="text" class="name adult-put" name="card" value=""></span></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</li>
          </ul>
     
 
 
     <div class="tab-bottom1" id="btn2">
         <span class="add-more1">
-             <img class="fr-ex1" src="img/add.png" width="20rem">
+             <img class="fr-ex1" src="../commons/img/add.png" width="20rem">
              添加/修改乘客
         </span>
     </div>
 
     <!--电话-->
+   <div class="departdate-wrap">
+        <div class="departText"> 联系人 <input placeholder="请填写联系人姓名" type="text" class="name adult-put"  name="userName" id="userName" value=""></div>
+    </div>
     <div class="departdate-wrap">
-        <div class="departText"> 电话 <input placeholder="联系人电话" type="text" class="name adult-put" name="name" value=""></div>
-        
+        <div class="departText"> 联系方式 <input placeholder="请填写联系方式" type="text" class="name adult-put" name="userTel" id="userTel" value=""></div>
     </div>
          
 
 
-    <div class="btn"><a href="javascript:void(0);" class="search-btn">确认</a></div>
+    <div class="btn"><a href="javascript:void(0);" class="search-btn" onclick="_sure(this)">确认</a></div>
 
     
    
     <div class="footer">
         <div class="service_num">
-            <span><img src="img/phone.png" alt="" class="serv_phone"></span>
+            <span><img src="../commons/img/phone.png" alt="" class="serv_phone"></span>
             <a href="tel:13456789" id="tel">客服电话</a>
         </div>
         <div class="my_order">
-            <span><img src="img/order_img.png" alt="" class="serv_order"></span>
+            <span><img src="../commons/img/order_img.png" alt="" class="serv_order"></span>
             <span class="my_orderd">我的订单</span>
         </div>
     </div>
@@ -144,11 +136,11 @@ $(document).ready(function(){
     <ul class="footer-image-section">
      <li><a href="javascript:;" >
        <div>
-        <img src="img/Cii9EFd2EnyIbZL3AAAGJflP3TcAABgSwP_-cMAAAY9010.png" />
+        <img src="../commons/img/Cii9EFd2EnyIbZL3AAAGJflP3TcAABgSwP_-cMAAAY9010.png" />
        </div><p>我的订单</p></a></li>
      <li><a href="javascript:;" >
        <div>
-        <img src="img/Cii9EFd2EnyIRGXJAAAG7hicC8gAAGXrgP_-PUAAAcL346.png" />
+        <img src="../commons/img/Cii9EFd2EnyIRGXJAAAG7hicC8gAAGXrgP_-PUAAAcL346.png" />
        </div><p>回到首页</p></a></li>
     </ul>
     
@@ -162,6 +154,80 @@ $(document).ready(function(){
     </div>
    </div>
   </footer>   
-     
+     <script>
+    	$(document).ready(function(){
+			$("#btn2").click(function(){
+			    $("#t_re").append(
+				    '<li id="touristContent">' + 
+						'<div>' + 
+							'<div class="adult-div">' + 
+								'<div class="tab-content adult ">' + 
+									'<div class="del" id="del">' + 
+										'<i class="glyphicon glyphicon-minus" onclick="del(this)"></i>' + 
+									'</div>' + 
+									'<div class="content">' + 
+										'<div class="row adultNameput"><span class="xi_xi">姓名</span><span><input placeholder="乘客姓名" type="text" class="name adult-put" name="name" value=""></span></div>' + 
+										'<div class="row adultNameput"><span class="xi_xi">身份证</span><span><input placeholder="身份证号" type="text" class="name adult-put" name="card" value=""></span></div>' + 
+									'</div>' + 
+								'</div>' + 
+							'</div>' + 
+						'</div>' + 
+					'</li>'
+				);
+			});
+		});
+    	
+    	// 删除
+    	function del(obj){
+	  		$($(obj).parents('li')).remove();
+	  	}
+    	
+    	
+    	// 确认
+	  	function _sure(obj) {
+	  		$(obj).attr("disabled", true);
+	  		var jsonArray = [];
+	  		var elements = $('#t_re').children();
+			for (var i = 0; i < elements.length; i++) {
+				var _name = $($(elements[i]).find("input[type='text']").eq(0)).val();
+				var _card = $($(elements[i]).find("input[type='text']").eq(1)).val();
+				var jsonobject = {"checkName":_name, "cardId":_card};
+				jsonArray[i] = jsonobject;
+			}
+			
+			var startAddress = $("#startAddress").val();
+			var endAddress = $("#endAddress").val();
+			var userName = $("#userName").val();
+			var userTel = $("#userTel").val();
+			var date1 = $('#date1').val();
+	  		var date2 = $('#date2').val();
+			
+			var json = {"jsonArray":JSON.stringify(jsonArray), "peopleNum":jsonArray.length, "userName":userName, 
+				"userTel":userTel, "startAddress":startAddress, "endAddress":endAddress, "date1":date1, "date2":date2};
+			
+// 			alert(JSON.stringify(json));
+			send(json, obj);
+	  	}
+    	
+	 // ajax请求后台
+	  	function send(json, obj) {
+	  		$.ajax({
+			    url:"add.html",    //请求的url地址
+			    dataType:"json",   //返回格式为json
+			    data: json,    //参数值
+			    type:"post",   //请求方式
+			    success:function(data){
+			        //请求成功时处理
+			        alert("添加成功");
+			  		$(obj).attr("disabled", false);
+			    },
+			    error:function(XMLHttpRequest, textStatus, errorThrown) {
+			        //请求出错处理
+					alert("添加失败");
+			  		$(obj).attr("disabled", false); 
+			    }
+			});
+	  	}
+    </script>
  </body>
 </html>
