--- a/src/main/webapp/WEB-INF/view/hotel.html
+++ b/src/main/webapp/WEB-INF/view/hotel.html
@@ -1,153 +1,233 @@
 <!DOCTYPE html>
 <html>
  <head> 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-  <title>酒店 </title> 
-  <meta name="viewport" id="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" href="css/bootstrap.css" /> 
-  <link rel="stylesheet" href="css/style.css" />  
-  <link rel="stylesheet" href="css/train.css" /> 
-     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js" ></script>
-     
-<script>s
-$(document).ready(function(){
-  $("#btn2").click(function(){
-    $("#t_re").append("<li id='touristContent'><div><div class='adult-div'><div class='tab-content adult' ><div class='del' id='del'><i class='glyphicon glyphicon-minus'></i></div><div class='content'><div class='row adultNameput'><span class='xi_xi'>成人票</span><span><input placeholder='乘客姓名 type=text class=name adult-put name=name value=></span></div><div class=row adultNameput><span class=xi_xi>身份证</span><span><input placeholder=身份证号 type=text class=name adult-put name=name value=></span></div></div></div></div></div></li>");
-  });
-});
-</script>
-     <script type="text/javascript">
-$(document).ready(function(){
-  $("#del").click(function(){
-    $("#touristContent").remove();
-  });
-});
-</script>   
- </head> 
- <body> 
-
-     <header class="m_header  sticky_head" id="J_header" style="width:100%;">
-            <div class="m_header_bar J_header-bar">
-                <div class="mhb_left">
-                    <a class="go_to_home" href="home.html"><i class="glyphicon glyphicon-home"></i></a>
-                    
-                </div>
-                <div class="mhb_center mhb_center_across">
-                    <h2 class="">酒店</h2>
-                </div>
-                <div class="mhb_right">
-                    <a class="account" href="me.html" ><i class="glyphicon glyphicon-user"></i></a>
-                    <div class="navi J_header-navi-trigger">导航</div>
-                </div>
-                
-            </div>
-        </header>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+    <title>酒店 </title> 
+    <meta name="viewport" id="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="../commons/css/bootstrap.css" /> 
+    <link rel="stylesheet" href="../commons/css/style.css" />  
+    <link rel="stylesheet" href="../commons/css/train.css" /> 
+    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js" ></script>
+	<style>label{vertical-align: baseline;}label{margin-right: 10px;}</style>
+</head> 
+<body> 
+    <header class="m_header  sticky_head" id="J_header" style="width:100%;">
+		<div class="m_header_bar J_header-bar">
+			<div class="mhb_left">
+				<a class="go_to_home" href="home.html"><i class="glyphicon glyphicon-home"></i></a>
+	
+			</div>
+			<div class="mhb_center mhb_center_across">
+				<h2 class="">酒店</h2>
+			</div>
+			<div class="mhb_right">
+				<a class="account" href="me.html"><i class="glyphicon glyphicon-user"></i></a>
+				<div class="navi J_header-navi-trigger">导航</div>
+			</div>
+	
+		</div>
+	</header>
 
      <!--piao-->
-
-     <div id="mainpage">
-    <div class="departdate-wrap">
-        <div class="departText">地点</div>
-        <div class="date1">
-            <span class="mad" ><input placeholder="请输入" type="text" class="name adult-put" name="name" value=""></span>
-
-        </div>
-    </div>
-    <div class="departdate-wrap">
-        <div class="departText">入住时间</div>
-        <div class="date1">
-            <span class="mad" ><input type="month" style="border: none; height: 50px;" /></span>
-
-        </div>
-    </div>
-
-
-         <!--添加人-->
-         <ul id="t_re">
-         <li id="touristContent">
-         <div >
-        <div class="adult-div">
-          <div class="tab-content adult " >
-            <div class="del" id="del">
-              <i class="glyphicon glyphicon-minus"></i>
-            </div>
-            <div class="content">
-              <div class="row adultNameput"><span class="xi_xi">姓名</span><span><input placeholder="入住姓名" type="text" class="name adult-put" name="name" value=""></span></div>
-               <div class="row adultNameput"><span class="xi_xi">身份证</span><span><input placeholder="身份证号" type="text" class="name adult-put" name="name" value=""></span></div>
-            </div>
-          </div>
-        </div>
-        
-        
-        </div>
-         </li>
-         <li>
-         </li>
-         </ul>
+	<div id="mainpage">
+		<div class="departdate-wrap">
+			<div class="departText">地点</div>
+			<div class="date1">
+				<span class="mad"><input placeholder="请输入" type="text" class="name adult-put" name="address" id="address"  value=""></span>
+			</div>
+		</div>
+	    <div class="departdate-wrap">
+	       <!--入住时间-->
+		   <ul class="row zero time_erm">
+	            <li class="date-label1">
+	                <em>日期</em>
+	            </li>
+	            <li class="right_side col-sm-10 zero">
+	                <div class="information_time">
+	                    <div class="date-duration">
+	                        <div class="check-in"><input type="date" id="date1" style="border: none; height: 50px;" /><em>入住</em></div>
+	                        <div class="check-out"><input type="date" id="date2" style="border: none; height: 50px;" onchange="_change()"/><em>离店</em></div>
+	                    </div>
+	                </div>
+	            </li>
+	            <li class="date-label1 fr" style="font-size: 2rem;"><span class="date-sum" id="_span"></span></li>
+		    </ul>
+	    </div>
+        <!--添加人-->
+        <ul id="t_re">
+	        <li id="touristContent">
+	         	<div class='a'>
+		            <div class="row adultNameput" style="text-align: center">  请选择 :  <label>成人&nbsp;&nbsp;&nbsp;<input type="radio" name="radio0" value="0" checked> </label>     <label>儿童&nbsp;&nbsp;&nbsp;<input type="radio" name="radio0" value="1"> </label></div>
+		         	<div>
+						<div class="adult-div">
+							<div class="tab-content adult ">
+								<div class="del" onclick="del(this)">
+									<i class="glyphicon glyphicon-minus"></i>
+								</div>
+								<div class="content">
+									<div class="row adultNameput"><span class="xi_xi">姓&nbsp;&nbsp;&nbsp;名</span><span><input placeholder="入住姓名" type="text" class="name adult-put" name="name" value=""></span></div>
+									<div class="row adultNameput"><span class="xi_xi">身份证</span><span><input placeholder="身份证号" type="text" class="name adult-put" name="card" value=""></span></div>
+								</div>
+							</div>
+						</div>
+		        	</div>
+	        	</div>
+	         </li>
+        </ul>
     
 
+		<div class="tab-bottom1" id="btn2">
+			<span class="add-more1">
+				<img class="fr-ex1" src="../commons/img/add.png" width="20rem">添加入住信息  
+			 </span>
+		</div>
+	
+	    <!--电话-->
+	     <div class="departdate-wrap">
+	        <div class="departText"> 联系人:<input placeholder="请填写联系人姓名" type="text" class="name adult-put" name="userName" id="userName" value=""></div>
+	    </div>
+	    <div class="departdate-wrap">
+	        <div class="departText"> 联系方式: <input placeholder="请填写联系方式" type="text" class="name adult-put" name="userTel" id="userTel" value=""></div>
+	    </div>
+	
+	    <div class="btn"><a href="javascript:void(0);" class="search-btn" onclick="_sure()">确认</a></div>
+	   
+	    <div class="footer">
+	        <div class="service_num">
+	            <span><img src="../commons/img/phone.png" alt="" class="serv_phone"></span>
+	            <a href="tel:13456789" id="tel">客服电话</a>
+	        </div>
+	        <div class="my_order">
+	            <span><img src="../commons/img/order_img.png" alt="" class="serv_order"></span>
+	            <span class="my_orderd">我的订单</span>
+	        </div>
+	    </div>
+	</div>
 
-    <div class="tab-bottom1" id="btn2">
-        <span class="add-more1">
-             <img class="fr-ex1" src="img/add.png" width="20rem">
-             添加入住信息  
-        </span>
-    </div>
-
-    <!--电话-->
-    <div class="departdate-wrap">
-        <div class="departText"> 电话 <input placeholder="联系人电话" type="text" class="name adult-put" name="name" value=""></div>
-        
-    </div>
-         
-
-
-    <div class="btn"><a href="javascript:void(0);" class="search-btn">确认</a></div>
-
-    
-   
-    <div class="footer">
-        <div class="service_num">
-            <span><img src="img/phone.png" alt="" class="serv_phone"></span>
-            <a href="tel:13456789" id="tel">客服电话</a>
-        </div>
-        <div class="my_order">
-            <span><img src="img/order_img.png" alt="" class="serv_order"></span>
-            <span class="my_orderd">我的订单</span>
-        </div>
-    </div>
-</div>
-
-   <section class="i-slogan"> 
-    <div class="slogan-text"> 
-     <span>让旅游更简单</span> 
-    </div> 
-   </section> 
-  <a href="javascript:;" class="to-top J_toTop hidden"></a> 
-  <a class="33996"></a> 
-  <footer id="footerID" style="padding-bottom:10px;">
-   <div class="footer-container">
-    <ul class="footer-image-section">
-     <li><a href="javascript:;" >
-       <div>
-        <img src="img/Cii9EFd2EnyIbZL3AAAGJflP3TcAABgSwP_-cMAAAY9010.png" />
-       </div><p>我的订单</p></a></li>
-     <li><a href="javascript:;" >
-       <div>
-        <img src="img/Cii9EFd2EnyIRGXJAAAG7hicC8gAAGXrgP_-PUAAAcL346.png" />
-       </div><p>回到首页</p></a></li>
-    </ul>
-    
-    <div class="footer-user-info">
-     <a href="sign.html">登录</a>
-     <p class="sp">|</p>
-     <a href="longin.html">注册</a>
-    </div>
-    <div class="footer-icp">
-      哈尔滨有限公司 | 哈尔滨有限公司
-    </div>
-   </div>
-  </footer>   
-     
+   <section class="i-slogan">
+		<div class="slogan-text">
+			<span>让旅游更简单</span>
+		</div>
+	</section>
+	<a href="javascript:;" class="to-top J_toTop hidden"></a>
+	<a class="33996"></a>
+	<footer id="footerID" style="padding-bottom:10px;">
+		<div class="footer-container">
+			<ul class="footer-image-section">
+				<li>
+					<a href="javascript:;">
+						<div>
+							<img src="../commons/img/Cii9EFd2EnyIbZL3AAAGJflP3TcAABgSwP_-cMAAAY9010.png" />
+						</div>
+						<p>我的订单</p>
+					</a>
+				</li>
+				<li>
+					<a href="javascript:;">
+						<div>
+							<img src="../commons/img/Cii9EFd2EnyIRGXJAAAG7hicC8gAAGXrgP_-PUAAAcL346.png" />
+						</div>
+						<p>回到首页</p>
+					</a>
+				</li>
+			</ul>
+	
+			<div class="footer-user-info">
+				<a href="sign.html">登录</a>
+				<p class="sp">|</p>
+				<a href="longin.html">注册</a>
+			</div>
+			<div class="footer-icp">
+				哈尔滨有限公司 | 哈尔滨有限公司
+			</div>
+		</div>
+	</footer>  
+<script>
+  	
+	$(document).ready(function(){
+	  $("#btn2").click(function(){
+	    $("#touristContent").append('<div class="a"><div class="row adultNameput" style="text-align: center">  请选择 :  <label>成人&nbsp;&nbsp;&nbsp;<input type="radio" checked name="radio" value="0"> </label>' + 
+	    '<label>儿童&nbsp;&nbsp;&nbsp;<input type="radio" name="radio" value="1"> </label></div><div><div class="adult-div"><div class="tab-content adult " >' + 
+	    '<div class="del"  onclick="del(this)"><i class="glyphicon glyphicon-minus"></i></div><div class="content"><div class="row adultNameput"><span class="xi_xi">姓&nbsp;&nbsp;&nbsp;名</span><span>' + 
+	    '<input placeholder="入住姓名" type="text" class="name adult-put" name="name" value=""></span></div><div class="row adultNameput"><span class="xi_xi">身份证</span><span>' + 
+	    '<input placeholder="身份证号" type="text" class="name adult-put" name="name" value=""></span></div></div></div></div></div></div>');
+	  });
+	});
+	
+	// 删除
+  	function del(obj){
+  		$($(obj).parents('.a')).remove();
+  	}
+  	
+  	// 确认
+  	function _sure(obj) {
+  		var jsonArray = [];
+  		var elements = $('.a');
+		for (var i = 0; i < elements.length; i++) {
+			var _radio = $($(elements[i]).find("input[type='radio']:checked")).val();
+			var _name = $($(elements[i]).find("input[type='text']").eq(0)).val();
+			var _card = $($(elements[i]).find("input[type='text']").eq(1)).val();
+			var jsonobject = {"type":_radio, "checkName":_name, "cardId":_card};
+			jsonArray[i] = jsonobject;
+		}
+		
+		var address = $("#address").val();
+		var userName = $("#userName").val();
+		var userTel = $("#userTel").val();
+		var date1 = $('#date1').val();
+  		var date2 = $('#date2').val();
+		
+		var json = {"jsonArray":JSON.stringify(jsonArray), "peopleNum":jsonArray.length, "userName":userName, 
+				"userTel":userTel, "address":address, "date1":date1, "date2":date2};
+		
+// 		alert(JSON.stringify(json));
+		
+		send(json, obj);
+  	}
+  	
+  	// 时间验证
+  	function _change() {
+  		var date1 = $('#date1').val();
+  		var date2 = $('#date2').val();
+  		if(date1 == null || date1 == '') {
+  			alert('请选择入住日期');
+  			return;
+  		}
+  		
+  		if(date2 == null || date2 == '') {
+  			alert('请选择离开日期');
+  			return;
+  		}
+  		var dt1 = new Date(Date.parse(date1));
+		var dt2= new Date(Date.parse(date2));
+		var diff = parseInt((dt2.getTime() - dt1.getTime()) / (1000 * 60 * 60 * 24)); 
+		if(diff <= 0) {
+			alert('离开日期必须大于入住日期');
+			$('#date2').val('');
+  			return;
+		}
+		$('#_span').html('共' + diff + '晚');
+  	}
+  	
+ 	// ajax请求后台
+  	function send(json, obj) {
+  		$.ajax({
+		    url:"add.html",    //请求的url地址
+		    dataType:"json",   //返回格式为json
+		    data: json,    //参数值
+		    type:"post",   //请求方式
+		    success:function(data){
+		        //请求成功时处理
+		        alert("添加成功");
+		  		$(obj).attr("disabled", false); 
+		    },
+		    error:function(XMLHttpRequest, textStatus, errorThrown) {
+		        //请求出错处理
+				alert("添加失败");
+		  		$(obj).attr("disabled", false); 
+		    }
+		});
+  	}
+  </script>
  </body>
 </html>
