--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -70,7 +70,7 @@
 			        	delCookie('id');
 			        	// 添加cookie
 			        	setCookie('id', b.encode(data.code.toString()), 30); // 一個月有效期
-			        	alert(getCookie('id'));
+// 			        	alert(getCookie('id'));
 			        }
 			  		$(obj).attr("disabled", false); 
 			    },
