--- a/src/main/webapp/WEB-INF/view/mayn.html
+++ b/src/main/webapp/WEB-INF/view/mayn.html
@@ -70,9 +70,9 @@
     </ul>
     
     <div class="footer-user-info">
-     <a href="sign.html">登录</a>
+     <a href="/login.html">登录</a>
      <p class="sp">|</p>
-     <a href="longin.html">注册</a>
+     <a href="/register.html">注册</a>
     </div>
     <div class="footer-icp">
       哈尔滨有限公司 | 哈尔滨有限公司
