--- a/src/main/webapp/WEB-INF/view/home.html
+++ b/src/main/webapp/WEB-INF/view/home.html
@@ -12,8 +12,9 @@
 	<script src="commons/js/jquery.js"></script>
 	<script>
 		$.getScript('http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js',function(){ 
-			alert(JSON.stringify(remote_ip_info));
-		  	alert(remote_ip_info.province);//省份   
+			//alert(JSON.stringify(remote_ip_info));
+		  	//alert(remote_ip_info.province);//省份   
+		  	$('#city').html(remote_ip_info.province);
 		});
 	</script>
 	<script>
@@ -118,69 +119,49 @@
 		</div>
 
 		<!-- 分类 -->
-		<section class="i-category-entry">
-			<table class="list-style-3 marginb_0">
-				<tbody>
-					<tr>
-						<td class="hasImg">
-							<a href="list.html">
-								<span class="word">短途出游</span>
-							</a>
-						</td>
-						<td class="hasImg">
-							<a href="list.html">
-								<span class="word">长途出游</span>
-							</a>
-						</td>
-						<td class="hasImg">
-							<a href="list.html">
-								<span class="word">出国旅游</span>
-							</a>
-						</td>
-					</tr>
-					<tr>
-						<td class="hasImg">
-							<a href="aircraft.html">
-								<span class="word">机票</span>
-							</a>
-						</td>
-						<td class="hasImg">
-							<a href="hotel.html">
-								<span class="word">酒店</span>
-							</a>
-						</td>
-						<td class="hasImg">
-							<a href="visa.html">
-								<span class="word">签证</span>
-							</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<table class="list-style-3 margint_0">
-				<tbody>
-					<tr>
-						<td class="hasImg">
-							<a href="train.html">
-								<span class="word">火车票</span>
-							</a>
-						</td>
-						<td class="hasImg">
-							<a href="automobile.html">
-								<span class="word">直通车</span>
-							</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</section>
+		<section class="i-category-entry"> 
+     <table class="list-style-3 marginb_0"> 
+      <tbody>    
+      </tbody>
+     </table> 
+     <table class="list-style-2">
+       <tbody>
+         <tr>
+           <td class="hasImg color_red" rowspan="2">
+             <a href="hotel/hotel.html"><span class="word color_red">酒店</span><img class="category-img" src="../commons/img/1499221905_79016.png"></a>
+           </td>
+           <td class="hasImg color_red">
+            <a href="product/list.html?id=3" > <span class="word color_red">出国旅游</span></a>
+           </td>
+           <td class="hasImg color_red">
+             <a href="product/list.html?id=2"> <span class="word color_red">长途出游</span></a>
+            </td>                     
+         </tr>
+         <tr>
+              <td class="hasImg color_red"><a href="product/list.html?id=1"> <span class="word color_red">短途出游</span></a>
+              </td>
+          <td class="hasImg color_red"> <a href="automobile/addAutomobile.html"> <span class="word color_red">直通车</span></a>
+          </td>                      
+          </tr>
+                        
+                    </tbody></table>
+     <table class="list-style-3 marginb_0"> 
+      <tbody>
+       <tr> 
+        <td class="hasImg"> <a href="aircraft/addAircraft.html"><img src="../commons/img/1499221239_91608.png" width="20px" style="padding-right: 10px;"><span class="word">机票</span> </a> </td> 
+        <td class="hasImg"> <a href="train/addTrain.html"><img src="../commons/img/1493714602_44372.png" width="20px" style="padding-right: 10px;"><span class="word">火车票</span></a> </td> 
+        <td class="hasImg "> <a href="visa/addVisa.html"> <img src="../commons/img/1490347121_64791.png" width="20px" style="padding-right: 10px;"><span class="word">签证</span></a> </td> 
+       </tr> 
+      </tbody>
+     </table>
+    </section>
 	</div>
 
 	<!-- 推荐 -->
 	<section class="i-floor J_product_rec i-products">
 		<ul class="list-block J_product-list">
 			<li class="i-m-product-item" th:each="item : ${products}">
-				<a href="detailed.html">
+				<a th:href="'product/detail.html?product_id=' + ${item.product_id}" href="product/detail.html?product_id=">
 					<div class="item-top">
 						<div class="product-image">
 							<img src="commons/img/1.jpg" th:src="'/soft/upload/file/' + ${item.filepath}" />
@@ -201,7 +182,7 @@
 					</div>
 					<div class="item-bottom">
 						<h5 class="product-title" th:text="${item.description}">帽儿山位于阿什河上游，距离哈尔滨市84公里，距尚志市尚志镇45公里。</h5>
-						<p class="product-describe" th:html="${item.feature}">2人起接独立发班，无购物，天天发团</p>
+						<p class="product-describe" th:utext="${item.feature}">2人起接独立发班，无购物，天天发团</p>
 					</div>
 				</a>
 			</li>
@@ -216,7 +197,7 @@
 		<div class="footer-container">
 			<ul class="footer-image-section">
 				<li>
-					<a href="javascript:;">
+					<a href="/me.html">
 						<div>
 							<img src="commons/img/Cii9EFd2EnyIbZL3AAAGJflP3TcAABgSwP_-cMAAAY9010.png" />
 						</div>
