--- a/src/main/webapp/WEB-INF/view/productList.html
+++ b/src/main/webapp/WEB-INF/view/productList.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
 <meta name="viewport" id="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link rel="stylesheet" href="css/bootstrap.css" />
-<link rel="stylesheet" href="css/style.css" />
-<link href="css/home.css" rel="stylesheet">
-<link href="css/list.css" rel="stylesheet">
-<script src="js/jquery-1.js"></script>
-<script src="js/jquery_002.js"></script>
-<script src="js/jquery.js"></script>
-<script src="js/com .js"></script>
+<link rel="stylesheet" href="../commons/css/bootstrap.css" />
+<link rel="stylesheet" href="../commons/css/style.css" />
+<link href="../commons/css/home.css" rel="stylesheet">
+<link href="../commons/css/list.css" rel="stylesheet">
+<script src="../commons/js/jquery-1.js"></script>
+<script src="../commons/js/jquery_002.js"></script>
+<script src="../commons/js/jquery.js"></script>
+<!-- <script src="../commons/js/com.js"></script> -->
 </head>
 <body>
 
-	<header class="m_header   " id="J_header">
+	<header class="m_header" id="J_header">
 		<div class="m_header_bar J_header-bar">
 			<div class="mhb_left">
 				<a class="go_to_home" href="home.html"><i
@@ -41,35 +41,32 @@
 		<div class="result">
 			<div class="add"></div>
 			<div id="hasResult" style="display: block;">
-				<ul id="result" style="margin-top: 0px;">
-					<a href="detailed.html">
+				<ul th:each="item,stat : ${list}"  id="result" style="margin-top: 0px;">
+					<a  th:href="'detail.html?product_id=' + ${item.product_id}">
                     <li class="tour">
                     <div class="img">
-								<img src="img/ya.jpg"><span class="from from-type-1">跟团</span>
-								<div class="city-trans-box">
-									<span class="category">哈尔滨出发</span>
-								</div>
-							</div>
+						<img src="../commons/img/ya.jpg" th:src="'/soft/upload/file/' + ${item.filepath}">
+					</div>
 				    <div class="main-dess">
-								<div class="title">&lt;哈尔滨-亚布力滑雪-雪乡3日游&gt;撒野之旅</div>
+								<div class="title" th:text="${item.product_name}">&lt;哈尔滨-亚布力滑雪-雪乡3日游&gt;撒野之旅</div>
 								<div class="text_info"></div>
-								<div class="icon">
-									<span class="label topic-txt" style="color:#2DBB55">激情滑雪</span><span
-										class="label topic-txt" style="color:#2DBB55">运动</span><span
-										class="label topic-txt" style="color:#2DBB55">美食、美景</span>
-								</div>
-								<div class="tuanqi-box">
-									<span class="supply box_add"><i
-										class="sicon sicon-supply"></i><span class="label">捷旅天下</span></span><span
-										class="box_add"><i class="sicon sicon-group"></i><span
-										class="plan_dates">团期：01/10、01/13、01/17、01/20</span></span>
-								</div>
+<!-- 								<div class="icon"> -->
+<!-- 									<span class="label topic-txt" style="color:#2DBB55">激情滑雪</span><span -->
+<!-- 										class="label topic-txt" style="color:#2DBB55">运动</span><span -->
+<!-- 										class="label topic-txt" style="color:#2DBB55">美食、美景</span> -->
+<!-- 								</div> -->
+<!-- 								<div class="tuanqi-box"> -->
+<!-- 									<span class="supply box_add"><i -->
+<!-- 										class="sicon sicon-supply"></i><span class="label">捷旅天下</span></span><span -->
+<!-- 										class="box_add"><i class="sicon sicon-group"></i><span -->
+<!-- 										class="plan_dates">团期：01/10、01/13、01/17、01/20</span></span> -->
+<!-- 								</div> -->
 								<div class="advanced_info">
 									<div class="basic_info">
 										<span class="people">新品上线</span>
 									</div>
 									<div class="price">
-										<span>¥<strong>640</strong></span>
+										<span>¥<strong th:text="${item.product_price}">640</strong></span>
 									</div>
 								</div>
 							</div>
@@ -86,22 +83,22 @@
 			<ul class="footer-image-section">
 				<li><a href="javascript:;">
 						<div>
-							<img src="img/Cii9EFd2EnyIbZL3AAAGJflP3TcAABgSwP_-cMAAAY9010.png" />
+							<img src="../commons/img/Cii9EFd2EnyIbZL3AAAGJflP3TcAABgSwP_-cMAAAY9010.png" />
 						</div>
 						<p>我的订单</p>
 				</a></li>
 				<li><a href="javascript:;">
 						<div>
-							<img src="img/Cii9EFd2EnyIRGXJAAAG7hicC8gAAGXrgP_-PUAAAcL346.png" />
+							<img src="../commons/img/Cii9EFd2EnyIRGXJAAAG7hicC8gAAGXrgP_-PUAAAcL346.png" />
 						</div>
 						<p>回到首页</p>
 				</a></li>
 			</ul>
 
 			<div class="footer-user-info">
-				<a href="sign.html">登录</a>
+				<a href="/login.html">登录</a>
 				<p class="sp">|</p>
-				<a href="longin.html">注册</a>
+				<a href="/register.html">注册</a>
 			</div>
 			<div class="footer-icp">哈尔滨有限公司 | 哈尔滨有限公司</div>
 		</div>
