--- a/src/main/webapp/WEB-INF/view/hotel.html
+++ b/src/main/webapp/WEB-INF/view/hotel.html
@@ -137,7 +137,7 @@
 				<p class="sp">|</p>
 				<a href="sign.html">注册</a>
 			</div>
-			<div class="footer-icp">
+			<div class="footer-icp" th:text="${config.company}">
 				哈尔滨有限公司 | 哈尔滨有限公司
 			</div>
 		</div>
