--- a/src/main/webapp/WEB-INF/view/aircraft.html
+++ b/src/main/webapp/WEB-INF/view/aircraft.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
  <head> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
     <title>飞机票</title> 
@@ -149,7 +149,7 @@
      <p class="sp">|</p>
      <a href="/register.html">注册</a>
     </div>
-    <div class="footer-icp">
+    <div class="footer-icp" th:text="${config.company}">
       哈尔滨有限公司 | 哈尔滨有限公司
     </div>
    </div>
