--- a/src/main/webapp/WEB-INF/view/mayn.html
+++ b/src/main/webapp/WEB-INF/view/mayn.html
@@ -74,7 +74,7 @@
      <p class="sp">|</p>
      <a href="/register.html">注册</a>
     </div>
-    <div class="footer-icp">
+    <div class="footer-icp" th:text="${config.company}">
       哈尔滨有限公司 | 哈尔滨有限公司
     </div>
    </div>
