--- a/src/main/webapp/WEB-INF/view/pay.html
+++ b/src/main/webapp/WEB-INF/view/pay.html
@@ -102,7 +102,7 @@ $(document).ready(function(){
      <p class="sp">|</p>
      <a href="longin.html">注册</a>
     </div>
-    <div class="footer-icp">
+    <div class="footer-icp" th:text="${config.company}">
       哈尔滨有限公司 | 哈尔滨有限公司
     </div>
    </div>
