--- a/src/main/webapp/WEB-INF/view/productList.html
+++ b/src/main/webapp/WEB-INF/view/productList.html
@@ -100,7 +100,7 @@
 				<p class="sp">|</p>
 				<a href="/register.html">注册</a>
 			</div>
-			<div class="footer-icp">哈尔滨有限公司 | 哈尔滨有限公司</div>
+			<div class="footer-icp" th:text="${config.company}">哈尔滨有限公司 | 哈尔滨有限公司</div>
 		</div>
 	</footer>
 </body>
