--- a/src/main/webapp/WEB-INF/view/me.html
+++ b/src/main/webapp/WEB-INF/view/me.html
@@ -13,7 +13,7 @@
      <header class="m_header  sticky_head" id="J_header" style="width:100%;">
             <div class="m_header_bar J_header-bar">
                 <div class="mhb_left">
-                    <a class="go_to_home" href="home.html"><i class="glyphicon glyphicon-home"></i></a>
+                    <a class="go_to_home" href="/home.html"><i class="glyphicon glyphicon-home"></i></a>
                     
                 </div>
                 <div class="mhb_center mhb_center_across">
@@ -139,7 +139,7 @@
        </div><p>回到首页</p></a></li>
     </ul>
     
-    <div class="footer-user-info">
+    <div class="footer-user-info" id="footer">
      <a href="/login.html">登录</a>
      <p class="sp">|</p>
      <a href="/register.html">注册</a>
@@ -149,5 +149,14 @@
     </div>
    </div>
   </footer>   
+	<script type="text/javascript" src="commons/js/jquery-1.js"></script>
+  	 <script type="text/javascript" src="../commons/js/cookie.js"></script>
+	 <script>
+		 $(document).ready(function(){
+	         if(getCookie('id') != null && getCookie('id') != "") {
+	        	$('#footer').hide();
+	         }
+		})
+	 </script>   
  </body>
 </html>
