--- a/src/main/webapp/WEB-INF/view/productDetail.html
+++ b/src/main/webapp/WEB-INF/view/productDetail.html
@@ -75,7 +75,7 @@
   <header class="m_header   " id="J_header"> 
    <div class="m_header_bar J_header-bar"> 
     <div class="mhb_left"> 
-     <a class="go_to_home" href="home.html"><i class="glyphicon glyphicon-home"></i></a> 
+     <a class="go_to_home" href="/home.html"><i class="glyphicon glyphicon-home"></i></a> 
     </div> 
     <div class="mhb_center mhb_center_across"> 
      <h2 class="title">产品详情</h2> 
