--- a/src/main/webapp/WEB-INF/view/productList.html
+++ b/src/main/webapp/WEB-INF/view/productList.html
@@ -23,8 +23,8 @@
 			</div>
 			<div class="mhb_center"> 
      <div class="search_holder J_hs-holder">
-      <i class="glyphicon glyphicon-search"></i>
-       <input class="in_ppt"/>
+      <i class="glyphicon glyphicon-search" onclick="_search()"></i>
+       <input class="in_ppt" id="search" value=""/>
      </div> 
     </div>
 			<div class="mhb_right">
@@ -95,7 +95,7 @@
 				</a></li>
 			</ul>
 
-			<div class="footer-user-info">
+			<div class="footer-user-info" id="footer">
 				<a href="/login.html">登录</a>
 				<p class="sp">|</p>
 				<a href="/register.html">注册</a>
@@ -103,5 +103,18 @@
 			<div class="footer-icp" th:text="${config.company}">哈尔滨有限公司 | 哈尔滨有限公司</div>
 		</div>
 	</footer>
+	<script type="text/javascript" src="../commons/js/cookie.js"></script>
+	<script>
+	
+		 $(document).ready(function(){
+	         if(getCookie('id') != null && getCookie('id') != "") {
+	        	$('#footer').hide();
+	         }
+		})
+		 
+		function _search(){
+			window.location.href="/product/list.html?product_name=" + $('#search').val();
+		} 
+	</script>
 </body>
 </html>
