--- a/src/main/webapp/WEB-INF/view/ticketList.html
+++ b/src/main/webapp/WEB-INF/view/ticketList.html
@@ -85,7 +85,7 @@
 				</a></li>
 			</ul>
 
-			<div class="footer-user-info">
+			<div class="footer-user-info" id="footer">
 				<a href="/login.html">登录</a>
 				<p class="sp">|</p>
 				<a href="/register.html">注册</a>
@@ -93,5 +93,14 @@
 			<div class="footer-icp" th:text="${config.company}">哈尔滨有限公司 | 哈尔滨有限公司</div>
 		</div>
 	</footer>
+	<script type="text/javascript" src="../commons/js/jquery-1.js"></script>
+	<script type="text/javascript" src="../commons/js/cookie.js"></script>
+	 <script>
+		 $(document).ready(function(){
+	         if(getCookie('id') != null && getCookie('id') != "") {
+	        	$('#footer').hide();
+	         }
+		})
+	 </script> 
 </body>
 </html>
