--- a/src/main/webapp/WEB-INF/view/home.html
+++ b/src/main/webapp/WEB-INF/view/home.html
@@ -95,7 +95,7 @@
 				</div>
 			</div>
 			<div class="mhb_right">
-				<a class="account" href="me.html"><i
+				<a class="account" href="/me.html"><i
 					class="glyphicon glyphicon-user"></i></a>
 				<div class="navi J_header-navi-trigger">导航</div>
 			</div>
