--- a/src/main/webapp/WEB-INF/view/ticket1.html
+++ b/src/main/webapp/WEB-INF/view/ticket1.html
@@ -36,7 +36,7 @@ $(document).ready(function(){
                     <h2 class="">订门票</h2>
                 </div>
                 <div class="mhb_right">
-                    <a class="account" href="me.html" ><i class="glyphicon glyphicon-user"></i></a>
+                    <a class="account" href="/me.html" ><i class="glyphicon glyphicon-user"></i></a>
                     <div class="navi J_header-navi-trigger">导航</div>
                 </div>
                 
