--- a/src/main/webapp/WEB-INF/view/visa.html
+++ b/src/main/webapp/WEB-INF/view/visa.html
@@ -21,7 +21,7 @@
                     <h2 class="">签证</h2>
                 </div>
                 <div class="mhb_right">
-                    <a class="account" href="me.html" ><i class="glyphicon glyphicon-user"></i></a>
+                    <a class="account" href="/me.html" ><i class="glyphicon glyphicon-user"></i></a>
                     <div class="navi J_header-navi-trigger">导航</div>
                 </div>
                 
